tests/baselines/reference/conditionalExpressionNewLine1.errors.txt
tests/cases/compiler/conditionalExpressionNewLine1.ts(1,9): error TS2552: Cannot find name 'a'. Did you mean 'NaN'?
tests/cases/compiler/conditionalExpressionNewLine1.ts(1,13): error TS2552: Cannot find name 'b'. Did you mean 'v'?
tests/cases/compiler/conditionalExpressionNewLine1.ts(1,17): error TS2552: Cannot find name 'c'. Did you mean 'v'?


==== tests/cases/compiler/conditionalExpressionNewLine1.ts (3 errors) ====
    var v = a ? b : c;
            ~
!!! error TS2552: Cannot find name 'a'. Did you mean 'NaN'?
                ~
!!! error TS2552: Cannot find name 'b'. Did you mean 'v'?
                    ~
!!! error TS2552: Cannot find name 'c'. Did you mean 'v'?